# Cadmium

./: .gitignore  CMakeLists.txt  Core.cpp  Data.hpp  Figures.cpp  Figures.hpp  LICENSE  Version.hpp.in  build.sh
cmake/Modules/: FindClang.cmake
